Changed scroll down behavior and fixed bug with single image click hander missing on mobile

--- a/app/assets/stylesheets/product-page.scss
+++ b/app/assets/stylesheets/product-page.scss
@@ -261,7 +261,7 @@ button.add-to-cart {
   	}
 
   	.slider-nav.slick-slider{
-  		margin-bottom:0px;
+  		margin-bottom:20px;
   	}
 
 }
